@@ -26,17 +26,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>org/jivesoftware/openfire/starter/ServerStarter.java</include>
-                        <include>org/jivesoftware/openfire/starter/JiveClassLoader.java</include>
-                        <include>org/jivesoftware/openfire/launcher/*.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
         </plugins>
 
         <sourceDirectory>../src/java</sourceDirectory>
@@ -57,6 +46,55 @@
             </resource>
         </resources>
     </build>
+
+    <profiles>
+        <profile>
+            <id>pre-1.9</id>
+            <activation>
+                <jdk>(,1.8]</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>org/jivesoftware/openfire/starter/ServerStarter.java</include>
+                                <include>org/jivesoftware/openfire/starter/JiveClassLoader.java</include>
+                                <include>org/jivesoftware/openfire/launcher/*.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>post-1.8</id>
+            <activation>
+                <jdk>(1.8,]</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>org/jivesoftware/openfire/starter/ServerStarter.java</include>
+                                <include>org/jivesoftware/openfire/starter/JiveClassLoader.java</include>
+                                <include>org/jivesoftware/openfire/launcher/*.java</include>
+                            </includes>
+                            <compilerArgs>
+                                <arg>--add-modules</arg>
+                                <arg>java.xml.bind</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
